@@ -1,3 +1,8 @@
+2020-12-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* knj.[ch]: Add new functions win32_fprintf(), win32_perror().
+	(Windows only)
+
 2020-10-24  Akira Kakuto  <kakuto@w32tex.org>
 
 	* readable.c, knj.c: More than one adjacent directory
